Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-32586

incorrect error about cyclic reference about JSON type virtual column

Details

    Description

      It is regression of MDEV-31112 fix (082aea7742455246fdcfd112a392b78c793dfebc)

      CREATE TABLE t1 (a int, b json AS (a));
      DROP TABLE t1;
      

      execution:

      CURRENT_TEST: main.test2
      mysqltest: At line 1: query 'CREATE TABLE t1 (a int, b json AS (a))' failed: 4029: Expression for field `b` is referring to uninitialized field `b`
      

      Attachments

        Activity

          People

            serg Sergei Golubchik
            sanja Oleksandr Byelkin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.