sql/item.h
@@ -2080,6 +2080,7 @@ public:
   }
   virtual bool check_field_expression_processor(void *arg) { return 0; }
   virtual bool check_func_default_processor(void *arg) { return 0; }
+  virtual bool update_func_default_processor(void *arg) { return 0; }
   /*
     Check if an expression value has allowed arguments, like DATE/DATETIME
     for date functions. Also used by partitioning code to reject
@@ -6544,6 +6545,7 @@ public:
   bool update_vcol_processor(void *arg) { return 0; }
   bool check_field_expression_processor(void *arg);
   bool check_func_default_processor(void *arg) { return true; }
+  bool update_func_default_processor(void *arg);
   bool register_field_in_read_map(void *arg);
 
   bool walk(Item_processor processor, bool walk_subquery, void *args)
